--- a/app/src/main/res/layout/activity_ayat_alquran.xml
+++ b/app/src/main/res/layout/activity_ayat_alquran.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/recyclerayatAlquran"
     tools:context="com.adek.muslimguide.activity.Alquran.AyatAlquranActivity"
     tools:listitem="@layout/ayatalquran">
 
